<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Angel Newton

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".ui.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_forms"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Infinitive field -->
            <EditText
                android:id="@+id/edit_infinitive"
                android:hint="@string/hint_infinitive"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Simple Past field -->
            <EditText
                android:id="@+id/edit_simple_past"
                android:hint="@string/hint_simple_past"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Past Participle field -->
            <EditText
                android:id="@+id/edit_past_participle"
                android:hint="@string/hint_past_participle"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Regular category -->
    <LinearLayout
        android:id="@+id/container_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_type"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_regular"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Label -->
    <TextView
        android:text="@string/definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-medium" tools:targetApi="16"
        android:textAppearance="?android:textAppearanceSmall" />

    <!-- Definition field -->
    <EditText
        android:id="@+id/edit_definition"
        android:hint="@string/hint_definition"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />


    <TextView
        android:text="@string/examples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-medium" tools:targetApi="16"
        android:textAppearance="?android:textAppearanceSmall" />
    <!-- Samples field -->
    <EditText
        android:id="@+id/edit_sample1"
        android:hint="@string/hint_sample"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <EditText
        android:id="@+id/edit_sample2"
        android:hint="@string/hint_sample"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <EditText
        android:id="@+id/edit_sample3"
        android:hint="@string/hint_sample"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />


</LinearLayout>
