<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for a single card item -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/infinitive"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="misunderstand"/>

                <TextView
                    android:id="@+id/simple_past"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="misunderstood"/>

                <TextView
                    android:id="@+id/past_participle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="misunderstood"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phonetic_infinitive"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="/'mɪsʌndə'stænd/"/>

                <TextView
                    android:id="@+id/phonetic_simple_past"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="/'mɪsʌndə'stʊd/"/>

                <TextView
                    android:id="@+id/phonetic_past_participle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="/'mɪsʌndə'stʊd/"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/play_infinitive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/touch_effect"
                    android:clickable="true">
                    <ImageView
                        android:contentDescription="@string/play"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/play_simple_past"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/touch_effect"
                    android:clickable="true">
                    <ImageView
                        android:contentDescription="@string/play"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/play_past_participle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/touch_effect"
                    android:clickable="true">
                    <ImageView
                        android:contentDescription="@string/play"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/translation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:paddingBottom="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="translation"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/definition"/>

                <TextView
                    android:id="@+id/definition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="not understand something; to assume wrong"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:paddingTop="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/examples"/>

                <TextView
                    android:id="@+id/sample1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="I did misunderstand you yesteraday. Sorry!"/>

                <TextView
                    android:id="@+id/sample2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="What? misunderstood! I can't belive it."/>

                <TextView
                    android:id="@+id/sample3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="If I had misunderstood you, I would had travel to the wrong country."/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>